<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="15dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/startDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/start_date" />

            <Button
                android:id="@+id/startDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/endDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/end_date" />

            <Button
                android:id="@+id/endDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_date" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="9dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/feeling" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sadEmoji"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:contentDescription="@string/sad"
                android:src="@drawable/cry" />

            <ImageView
                android:id="@+id/neutralEmoji"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@drawable/neutral"
                android:contentDescription="@string/neutral" />

            <ImageView
                android:id="@+id/happyEmoji"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:src="@drawable/happy"
                android:contentDescription="@string/happy" />
        </LinearLayout>

        <Switch
            android:id="@+id/isPainfulValue"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/is_painful" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_item"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:scaleType="center"
        android:src="@drawable/add_foreground"
        android:contentDescription="@string/app_name"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>